# P1-FairElections

./: CMakeLists.txt  FPTP.c  README.md  STAR.c  functions.h  get_settings.c  initialisering.c  main.c  miscellaneous.c  ranked.c  rated.c  rated.txt  state_data.txt  voting-system-code.c
test/: CMakeLists.txt  test.c
